--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -35,10 +35,12 @@ jobs:
         with:
           node-version: 20
           cache: 'npm'
+      - name: Enable yarn
+        run: corepack enable
       - name: Install dependencies
-        run: npm ci
+        run: yarn install --immutable
       - name: Build
-        run: npm run build
+        run: yarn build
       - name: Setup Pages
         uses: actions/configure-pages@v4
       - name: Upload artifact
